--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,3 +20,5 @@ add_executable(OMaior OMaior.c)
 add_executable(Consumo Consumo.c)
 add_executable(DistanciaEntreDoisPontos DistanciaEntreDoisPontos.c)
 add_executable(Distancia Distancia.c)
+add_executable(GastoDeCombustivel GastoDeCombustivel.c)
+add_executable(Cedulas Cedulas.c)
